# agent-audit

./: CHANGELOG.md  CONTRIBUTING.md  EDR_BACKLOG.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/: README.md
artifacts/article-support-dataset-v1/: README.md  manifest.json
artifacts/article-support-dataset-v1/analysis/: README.md  (+9 more)
artifacts/reviewer-pack-v1/: README.md
docs/: HISTORICAL_CHANGELOG.md  architecture.md  ast-precision-plan.md  disagreement-audit-implementation-backlog.md  report-redesign.md
src/agent_audit/: __init__.py  audit_log.py  batch_verifier.py  benchmark.py  cli.py  collection_scale.py  corpus_lab.py  cst.py  discovery.py  events.py  finding_dedup.py  llm_verifier.py  patch_generator.py  project_config.py  project_report.py  project_scanner.py  report.py  report_aggregation.py  report_bundle.py  report_rerank.py  rules.py  scanner.py  tool_normalization.py
tests/: smoke_test.py  test_agent_task_adapter.py  test_batch_verifier_backend.py  test_benchmark_corpus.py  test_claim_detector.py  test_claim_detector_i18n.py  test_collection_scale.py  test_config_audit.py  test_confirmation_bypass.py  test_corpus_lab.py  test_credential_context_bleed.py  test_educational_suppressor.py  test_finding_dedup.py  test_hypothetical_executed.py  test_markdown_features.py  test_mcp_config_mutation.py  test_native_regression_fixtures.py  test_patch_generator.py  test_project_report.py  test_project_scanner_regressions.py  test_report_bundle.py  test_report_rerank.py  test_rule_surface_classifier.py  test_taint.py
(+74 files in other folders)
